--- a/tex/id.tex
+++ b/tex/id.tex
@@ -13,17 +13,17 @@
 \studentnumber{116037910048}
 \major{软件工程}
 % \keywords{上海交大, 饮水思源, 爱国荣校}
-\keywords{SQL生成，INL2SQL，NL2SQL，多任务学习}
+\keywords{SQL生成，INL2SQL，NL2SQL，深度强化学习，多任务学习}
 
 \englishtitle{Research on Automatic Generation Technology of SQL Query Statement}
 \englishauthor{\textsc{Yunxiang Xiong}}
 \englishadvisor{Asso. Prof. \textsc{Beijun Shen}}
 % \englishcoadvisor{Prof. \textsc{Uom Uom}}
 \englishschool{Shanghai Jiao Tong University}
-\englishinstitute{\textsc{Depart of Software Engineering, School of Software} \\
+\englishinstitute{\textsc{School of Software} \\
   \textsc{Shanghai Jiao Tong University} \\
   \textsc{Shanghai, P.R.China}}
 \englishmajor{Software Engineering}
 \englishdate{Jan. 9th, 2019}
-\englishkeywords{SQL generation, INL2SQL, NL2SQL, deep reinforcement learning, multitask learning}
+\englishkeywords{SQL Generation, INL2SQL, NL2SQL, Deep Reinforcement Learning, Multitask Learning}
 
