--- a/tex/pubreview.tex
+++ b/tex/pubreview.tex
@@ -4,6 +4,6 @@
 % !TEX encoding = UTF-8 Unicode
 
 \begin{publications}{99}
-    \item\textsc{第一作者}. {中文核心期刊论文}, 2007.  
-    \item\textsc{第一作者}. {EI国际会议论文}, 2006.
+    \item\textsc{第一作者}. {EI国际会议论文}, 2017.  
+    \item\textsc{第一作者}. {SCI国际期刊论文}, 2017.
 \end{publications}
