--- a/thesis.tex
+++ b/thesis.tex
@@ -4,7 +4,7 @@
 %%==================================================
 
 % 双面打印
-\documentclass[master, openright, twoside]{sjtuthesis}
+\documentclass[master, openright, twoside, review]{sjtuthesis}
 % \documentclass[bachelor, openany, oneside, submit]{sjtuthesis}
 % \documentclass[master, review]{sjtuthesis}
 % \documentclass[%
@@ -104,7 +104,7 @@
   % 盲审论文中，发表学术论文及参与科研情况等仅以第几作者注明即可，不要出现作者或他人姓名
   \ifsjtu@review\relax
     \include{tex/pubreview}
-    \include{tex/projectsreview}  
+    % \include{tex/projectsreview}  
   \else
     \include{tex/pub}       % 发表论文
     % \include{tex/projects}  % 参与的项目
